# Matrices-Secuencial-Paralelo-Procesos

./: .gitignore  AYUDA_RAPIDA.txt  CLAUDE.md  CMakeLists.txt  GRAFICACION.md  INSTRUCCIONES_WINDOWS.txt  Instrucciones.md  README.md  compile.sh  plot_results.py  run.bat  run.sh
.claude/: settings.local.json
include/: Config.h  HardwareDetector.h  MatrixMultiplier.h  PerformanceAnalyzer.h  ProcessManager.h  SharedMemory.h  Utils.h
python_src/: GUIA_RAPIDA.md  README_PYTHON.md  __init__.py  hardware_detector.py  main.py  matrix_multiplier.py  performance_analyzer.py  plot_results.py  quick_test.py  requirements.txt  utils.py
src/: HardwareDetector.cpp  MatrixMultiplier.cpp  PerformanceAnalyzer.cpp  ProcessManager.cpp  SharedMemory.cpp  Utils.cpp  main.cpp
